# aitrading

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README_ZH.md  fly.toml
sdk/python/: README.md  pyproject.toml
sdk/python/aitrad/: __init__.py  agent.py  client.py  exceptions.py
sdk/python/aitrad_client/: __init__.py
sdk/python/aitrad_client/models/: __init__.py  agent_password_reset_confirm.py  agent_password_reset_request.py  agent_register_positions_type_0_item.py  agent_task_create_input_data_type_0.py  agent_token_recovery_request.py  challenge_join_request.py  challenge_settle_request.py  create_strategy_request.py  experiment_create_request.py  experiment_notification_request_input_data_type_0.py  follow_request.py  promote_run_request.py  reply_request.py  set_execution_mode_request.py  team_join_request.py  team_message_link_request.py  team_mission_create_request.py  team_submission_request_prediction_json_type_0.py  user_login_request.py
sdk/python/sooppiy/: __init__.py  agent.py  client.py  exceptions.py
sdk/python/sooppiy_client/: __init__.py
sdk/python/sooppiy_client/models/: __init__.py  agent_login.py  agent_message_create.py  agent_message_create_data_type_0.py  agent_messages_mark_read_request.py  agent_register.py  agent_task_create.py  agent_token_recovery_confirm.py  backtest_run_request.py  challenge_create_request.py  challenge_create_request_rules_json_type_0.py  challenge_submission_request.py  challenge_submission_request_prediction_json_type_0.py  create_memory_request.py  (+27 more)
sdk/python/tests/: test_client.py
(+346 files in other folders)
